# qwen-humaneval-eval

./: .gitignore  FAILURE_PATTERN_ANALYSIS.md  PROMPT_COMPARISON_GUIDE.md  README.md  SOFT_PROMPTS_QUICKSTART.md  analyze_best_model_by_category.py  analyze_devise_overlap.py  analyze_failures.py  analyze_fewshot_v2_failures.py  analyze_humaneval.py  category_analysis_best_model.txt  config.yml  debug_post_process.py  debug_step_by_step.py  devise_overlap_analysis.txt  docker-compose.yml  fewshot_v2_analysis_report.md  main.py  presentation.tex  prompt_tuning.yml  pyproject.toml  run_prompt_comparison.py  run_prompt_comparison.sh  teaching_examples_logic_errors.py  test_dedent.py  test_dedent2.py  test_raw_output.py
docker/: Dockerfile.eval  Dockerfile.llamacpp  Dockerfile.vllm
docs/: performance_improvements.md  prompt_strategies.md  soft_prompt_tuning.md  vllm_setup.md
prompts/: __init__.py  advanced_prompts.py  advanced_prompts.py.backup  code_completion.py  post_process_chat.py  post_process_v5.py  post_process_v7.py  prompt_loader.py
prompts/strategies/chat/fewshot_v1/: post_process.py  prompt.json
prompts/templates/: fewshot_v2.txt  minimal.txt
prompts/templates/completion/: fewshot_v1.txt  fewshot_v2_devise.txt
scripts/: inference.py  inference_with_soft_prompts.py  iterative_postprocess_optimizer.py  iterative_prompt_optimizer.py  manage_services.sh  reprocess_completions.py  run_evaluation.py  run_experiments.py  run_pipeline.sh  sandbox.py  train_soft_prompts.py  tune_prompts.py
soft_prompts/: best_soft_prompts.pt
(+2 files in other folders)
