[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-take-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autopep8>=2.3.2",
    "datasets>=4.1.1",
    "docker>=7.1.0",
    "openai>=2.2.0",
    "pyyaml>=6.0",
    "ruff>=0.14.0",
    "vllm>=0.11.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prompts*", "scripts*"]
